--- a/index.html
+++ b/index.html
@@ -22,75 +22,75 @@
     <main>
         <h1>Todas las Preguntas</h1>
         
-        <section>
+        <section class="html">
             <h2>HTML</h2>
             <ul>
                 <li>
                     <h3>¿Qué es HTML y cuál es su función principal en el desarrollo web?</h3>
                     <ul>
-                        <li>HTML es el lenguaje estándar utilizado para la creación de páginas web. Su función principal es estructurar el contenido de un sitio web mediante el uso de etiquetas que definen elementos como textos, imágenes, enlaces y otros componentes esenciales.</li>
+                        <li>HTML es el lenguaje de marcado que se utiliza para estrucutrar y mostrar paginas web</li>
                     </ul>
                 </li>
                 <li>
                     <h3>¿Qué son las etiquetas HTML y cómo se utilizan?</h3>
                     <ul>
-                        <li>Las etiquetas HTML son elementos que permiten estructurar y dar formato al contenido de una página web. Se utilizan mediante una sintaxis específica, donde cada etiqueta generalmente tiene una apertura (<etiqueta>) y un cierre (</etiqueta>), excepto algunas etiquetas que son auto-cerradas.</li>
+                        <li>Las etiquetas HTML son elementos que permiten estructurar y dar formato al contenido de una página web.</li>
                     </ul>
                 </li>
                 <li>
                     <h3>Ejemplos de algunas de las etiquetas HTML más comunes:</h3>
                     <ul>
-                        <li>h1 a h6 → Definen títulos de diferentes tamaños.</li>
+                        <li>h1 a h6 = Definen títulos de diferentes tamaños.</li>
                         <br>
-                        <li>p → Representa un párrafo de texto.</li>
+                        <li>p = Representa un párrafo de texto.</li>
                         <br>
-                        <li>a href="URL" → Crea un enlace a otra página o recurso.</li>
+                        <li>a href="URL" = Crea un enlace a otra página o recurso.</li>
                         <br>
-                        <li>img src="imagen.jpg" alt="Descripción" → Inserta una imagen.</li>
+                        <li>img src="imagen.jpg" alt="Descripción" = Inserta una imagen.</li>
                         <br>
-                        <li>ul> y li → Crean listas no ordenadas.</li>
+                        <li>ul> y li = Crean listas no ordenadas.</li>
                         <br>
-                        <li>ol y li → Crean listas ordenadas.</li>
+                        <li>ol y li = Crean listas ordenadas.</li>
                     </ul>
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="css">
             <h2>CSS</h2>
             <ul>
                 <li>
                     <h3>¿Qué es CSS y cómo se utiliza para dar estilo a una página web?</h3>
-                    <ul>CSS es un lenguaje de diseño utilizado para controlar la apariencia y el formato de una página web. Se usa para aplicar estilos a los elementos HTML, como colores, fuentes, márgenes y disposición de los elementos. Se puede agregar de tres formas: en línea (dentro del HTML), interno (en el <head>) o externo (mediante un archivo .css).</ul>
+                    <ul>CSS es un lenguaje de diseño que se utiliza para dar estilo a paginas web</ul>
                 </li>
                 <li>
                     <h3>¿Cuáles son las propiedades más importantes de CSS?</h3>
                     <ul>Algunas de las propiedades más importantes en CSS incluyen:
                         <li>
-                            color → Define el color del texto.
+                            color = Define el color del texto.
                         </li>
                         <li>
-                            background-color → Establece el color de fondo de un elemento.
+                            background-color = Establece el color de fondo de un elemento.
                         </li>
                         <li>
-                            font-size → Controla el tamaño de la fuente.
+                            font-size = Controla el tamaño de la fuente.
                         </li>
                         <li>
-                            margin → Establece el espacio exterior de un elemento.
+                            margin = Establece el espacio exterior de un elemento.
                         </li>
                         <li>
-                            padding → Define el espacio interno dentro de un elemento.
+                            padding = Define el espacio interno dentro de un elemento.
                         </li>
                         <li>
-                            border → Agrega bordes alrededor de un elemento.
+                            border = Agrega bordes alrededor de un elemento.
                         </li>
                         <li>
-                            display → Controla la forma en que un elemento se muestra en la página.
+                            display = Controla la forma en que un elemento se muestra en la página.
                         </li>
                     </ul>
                 </li>
                 <ul>
                     <h3>Explica el modelo de caja (Box Model) en CSS</h3>
-                    <p>El modelo de caja en CSS describe cómo se estructuran y espacian los elementos en una página. Cada elemento HTML se representa como una caja rectangular que consta de cuatro partes:</p>
+                    <p>El modelo de caja en CSS describe cómo se estructuran y espacian los elementos en una página. Cada elemento HTML se representa como una caja cuadrada.</p>
                     <li>Contenido: El área donde se encuentra el texto o los elementos dentro del contenedor.</li>
                     <li>Padding: Espacio entre el contenido y el borde del elemento.</li>
                     <li>Border: Un borde que rodea el padding y el contenido.</li>
@@ -105,14 +105,14 @@
                 </ul>
             </ul>
         </section>
-        <section>
+        <section class="JavaScript">
             <h2>JavaScript</h2>
             <ul>
                 <li><h3>¿Qué es JavaScript y cómo se integra en el desarrollo web?</h3></li>
-                <p>JavaScript es un lenguaje de programación que permite agregar interactividad y dinamismo a las páginas web. Se integra dentro del desarrollo web a través de scripts que pueden colocarse directamente en el código HTML o en archivos externos con extensión .js. Se utiliza para manejar eventos, manipular elementos del DOM y realizar peticiones a servidores.</p>
+                <p>JavaScript es un lenguaje de programación que se utiliza para crear páginas web interactivas</p>
 
                 <li><h3>Explica cómo JavaScript interactúa con el HTML y CSS a través del DOM (Document Object Model).</h3></li>
-                <p>El DOM es una representación en forma de árbol de los elementos HTML de una página. JavaScript puede acceder, modificar y manipular estos elementos en tiempo real. A través de métodos como document.getElementById() o document.querySelector(), JavaScript puede cambiar el contenido de una página, modificar estilos CSS y responder a eventos del usuario.</p>
+                <p>El DOM es una representación en forma de árbol de los elementos HTML de una página. JavaScript puede acceder, modificar y manipular estos elementos en tiempo real.</p>
 
                 <li><h3>Proporciona ejemplos de cómo JavaScript puede hacer que una página web sea interactiva.
                     Algunos ejemplos de interactividad con JavaScript incluyen:</h3></li>
@@ -127,11 +127,11 @@
                     <li>Crear efectos animados, como sliders o menús desplegables.</li>
             </ul>
         </section>
-        <section>
+        <section class="git">
             <h2>Git</h2>
             <ul>
                 <li><h3>¿Qué es Git y por qué es importante para el desarrollo web?</h3></li>
-                <p>Git es un sistema de control de versiones distribuido que permite a los desarrolladores gestionar y rastrear cambios en el código fuente de un proyecto. Es fundamental en el desarrollo web porque facilita la colaboración, evita la pérdida de código y permite trabajar en múltiples versiones de un mismo proyecto sin afectar la versión principal.</p>
+                <p>Git es un sistema de control de versiones distribuido que permite a los desarrolladores gestionar y rastrear cambios en el código fuente de un proyecto.</p>
 
                 <li><h3>Explica cómo Git se usa para el control de versiones en proyectos de desarrollo web.</h3></li>
                 <p>Git permite llevar un historial de cambios en un proyecto, lo que facilita la recuperación de versiones anteriores y la colaboración entre múltiples desarrolladores. Algunas de sus funciones clave incluyen:</p>
