--- a/seccioncss.html
+++ b/seccioncss.html
@@ -20,42 +20,42 @@
     </header>
 
     <main>
-        <section>
+        <section class="css">
             <h2>CSS</h2>
             <ul>
                 <li>
                     <h3>¿Qué es CSS y cómo se utiliza para dar estilo a una página web?</h3>
-                    <ul>CSS es un lenguaje de diseño utilizado para controlar la apariencia y el formato de una página web. Se usa para aplicar estilos a los elementos HTML, como colores, fuentes, márgenes y disposición de los elementos. Se puede agregar de tres formas: en línea (dentro del HTML), interno (en el <head>) o externo (mediante un archivo .css).</ul>
+                    <ul>CSS es un lenguaje de diseño que se utiliza para dar estilo a paginas web</ul>
                 </li>
                 <li>
                     <h3>¿Cuáles son las propiedades más importantes de CSS?</h3>
                     <ul>Algunas de las propiedades más importantes en CSS incluyen:
                         <li>
-                            color → Define el color del texto.
+                            color = Define el color del texto.
                         </li>
                         <li>
-                            background-color → Establece el color de fondo de un elemento.
+                            background-color = Establece el color de fondo de un elemento.
                         </li>
                         <li>
-                            font-size → Controla el tamaño de la fuente.
+                            font-size = Controla el tamaño de la fuente.
                         </li>
                         <li>
-                            margin → Establece el espacio exterior de un elemento.
+                            margin = Establece el espacio exterior de un elemento.
                         </li>
                         <li>
-                            padding → Define el espacio interno dentro de un elemento.
+                            padding = Define el espacio interno dentro de un elemento.
                         </li>
                         <li>
-                            border → Agrega bordes alrededor de un elemento.
+                            border = Agrega bordes alrededor de un elemento.
                         </li>
                         <li>
-                            display → Controla la forma en que un elemento se muestra en la página.
+                            display = Controla la forma en que un elemento se muestra en la página.
                         </li>
                     </ul>
                 </li>
                 <ul>
                     <h3>Explica el modelo de caja (Box Model) en CSS</h3>
-                    <p>El modelo de caja en CSS describe cómo se estructuran y espacian los elementos en una página. Cada elemento HTML se representa como una caja rectangular que consta de cuatro partes:</p>
+                    <p>El modelo de caja en CSS describe cómo se estructuran y espacian los elementos en una página. Cada elemento HTML se representa como una caja cuadrada.</p>
                     <li>Contenido: El área donde se encuentra el texto o los elementos dentro del contenedor.</li>
                     <li>Padding: Espacio entre el contenido y el borde del elemento.</li>
                     <li>Border: Un borde que rodea el padding y el contenido.</li>
