--- a/secciongit.html
+++ b/secciongit.html
@@ -20,11 +20,11 @@
     </header>
 
     <main>
-        <section>
+        <section class="git">
             <h2>Git</h2>
             <ul>
                 <li><h3>¿Qué es Git y por qué es importante para el desarrollo web?</h3></li>
-                <p>Git es un sistema de control de versiones distribuido que permite a los desarrolladores gestionar y rastrear cambios en el código fuente de un proyecto. Es fundamental en el desarrollo web porque facilita la colaboración, evita la pérdida de código y permite trabajar en múltiples versiones de un mismo proyecto sin afectar la versión principal.</p>
+                <p>Git es un sistema de control de versiones distribuido que permite a los desarrolladores gestionar y rastrear cambios en el código fuente de un proyecto.</p>
 
                 <li><h3>Explica cómo Git se usa para el control de versiones en proyectos de desarrollo web.</h3></li>
                 <p>Git permite llevar un historial de cambios en un proyecto, lo que facilita la recuperación de versiones anteriores y la colaboración entre múltiples desarrolladores. Algunas de sus funciones clave incluyen:</p>
