--- a/seccionhtml.html
+++ b/seccionhtml.html
@@ -20,35 +20,35 @@
     </header>
 
     <main>
-        <section>
+        <section class="html">
             <h2>HTML</h2>
             <ul>
                 <li>
                     <h3>¿Qué es HTML y cuál es su función principal en el desarrollo web?</h3>
                     <ul>
-                        <li>HTML es el lenguaje estándar utilizado para la creación de páginas web. Su función principal es estructurar el contenido de un sitio web mediante el uso de etiquetas que definen elementos como textos, imágenes, enlaces y otros componentes esenciales.</li>
+                        <li>HTML es el lenguaje de marcado que se utiliza para estrucutrar y mostrar paginas web</li>
                     </ul>
                 </li>
                 <li>
                     <h3>¿Qué son las etiquetas HTML y cómo se utilizan?</h3>
                     <ul>
-                        <li>Las etiquetas HTML son elementos que permiten estructurar y dar formato al contenido de una página web. Se utilizan mediante una sintaxis específica, donde cada etiqueta generalmente tiene una apertura (<etiqueta>) y un cierre (</etiqueta>), excepto algunas etiquetas que son auto-cerradas.</li>
+                        <li>Las etiquetas HTML son elementos que permiten estructurar y dar formato al contenido de una página web.</li>
                     </ul>
                 </li>
                 <li>
                     <h3>Ejemplos de algunas de las etiquetas HTML más comunes:</h3>
                     <ul>
-                        <li>h1 a h6 → Definen títulos de diferentes tamaños.</li>
+                        <li>h1 a h6 = Definen títulos de diferentes tamaños.</li>
                         <br>
-                        <li>p → Representa un párrafo de texto.</li>
+                        <li>p = Representa un párrafo de texto.</li>
                         <br>
-                        <li>a href="URL" → Crea un enlace a otra página o recurso.</li>
+                        <li>a href="URL" = Crea un enlace a otra página o recurso.</li>
                         <br>
-                        <li>img src="imagen.jpg" alt="Descripción" → Inserta una imagen.</li>
+                        <li>img src="imagen.jpg" alt="Descripción" = Inserta una imagen.</li>
                         <br>
-                        <li>ul> y li → Crean listas no ordenadas.</li>
+                        <li>ul> y li = Crean listas no ordenadas.</li>
                         <br>
-                        <li>ol y li → Crean listas ordenadas.</li>
+                        <li>ol y li = Crean listas ordenadas.</li>
                     </ul>
                 </li>
             </ul>
