--- a/seccionjavascript.html
+++ b/seccionjavascript.html
@@ -20,14 +20,14 @@
     </header>
 
     <main>
-        <section>
+        <section class="JavaScript">
             <h2>JavaScript</h2>
             <ul>
                 <li><h3>¿Qué es JavaScript y cómo se integra en el desarrollo web?</h3></li>
-                <p>JavaScript es un lenguaje de programación que permite agregar interactividad y dinamismo a las páginas web. Se integra dentro del desarrollo web a través de scripts que pueden colocarse directamente en el código HTML o en archivos externos con extensión .js. Se utiliza para manejar eventos, manipular elementos del DOM y realizar peticiones a servidores.</p>
+                <p>JavaScript es un lenguaje de programación que se utiliza para crear páginas web interactivas</p>
 
                 <li><h3>Explica cómo JavaScript interactúa con el HTML y CSS a través del DOM (Document Object Model).</h3></li>
-                <p>El DOM es una representación en forma de árbol de los elementos HTML de una página. JavaScript puede acceder, modificar y manipular estos elementos en tiempo real. A través de métodos como document.getElementById() o document.querySelector(), JavaScript puede cambiar el contenido de una página, modificar estilos CSS y responder a eventos del usuario.</p>
+                <p>El DOM es una representación en forma de árbol de los elementos HTML de una página. JavaScript puede acceder, modificar y manipular estos elementos en tiempo real.</p>
 
                 <li><h3>Proporciona ejemplos de cómo JavaScript puede hacer que una página web sea interactiva.
                     Algunos ejemplos de interactividad con JavaScript incluyen:</h3></li>
